--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,6 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:password@localhost:8761/eureka
   instance:
     hostname: localhost
