--- a/application.yml
+++ b/application.yml
@@ -4,5 +4,6 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://eureka:password@localhost:8761/eureka
+      non-secure-port: 80
   instance:
     hostname: localhost
