--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://eureka:password@localhost:8761/eureka
+      defaultZone: http://192.168.30.243:8761/eureka
       non-secure-port: 80
   instance:
-    hostname: localhost
+    hostname: 192.168.30.243
